Add bundling using webpack

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 <DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8"> 
+    <meta charset="UTF-8">
   </head>
   <body>
     <h1>Javascript Starter App</h1>
+    <script src="bundle.js"></script>
   </body>
 </html>
