Add HTTP and a Mock API using JSON Schema Faker and JSON Server

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,20 @@
   </head>
   <body>
     <h1>Javascript Starter App</h1>
+    <h2>Users</h2>
+    <table>
+      <thead>
+        <th>&nbsp;</th>
+        <th>Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Email</th>
+      </thead>
+      <tbody id="users">
+
+      </tbody>
+    </table>
+
     <script src="bundle.js"></script>
   </body>
 </html>
